[package]
name = "lynn_sundial"
version = "0.0.1-rc.1"
edition = "2024"
rust-version = "1.88"
authors = ["lynn_sundial Contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cherish-ltt/lynn_sundial"
description = "支持cron的异步并发定时任务管理器"
categories = ["scheduler"]
keywords = ["scheduler" , "cron-scheduler" , "wheel-scheduler"]

[dependencies]
chrono = "=0.4.41"
cron = "=0.15.0"
tokio = { version = "=1.46.1", features = ["macros","net","sync","rt-multi-thread","time","io-util"] }

[features]
default=["schedule"]
schedule=[]
