[package]
name = "lynn_sundial"
version = "0.0.1-rc.2"
edition = "2024"
rust-version = "1.89"
authors = ["lynn_sundial Contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cherish-ltt/lynn_sundial"
description = "支持cron的异步并发定时任务管理器"
keywords = ["scheduler" , "cron-scheduler" , "wheel-scheduler"]

[dependencies]
chrono = "=0.4.41"
cron = "=0.15.0"
crossbeam-deque = "=0.8.6"
tokio = { version = "=1.47.1", features = ["macros","rt-multi-thread","time"] }

[features]
default=["schedule"]
schedule=[]
